--- a/ormconfig.json
+++ b/ormconfig.json
@@ -5,6 +5,6 @@
    "username": "root",
    "password": "75120011",
    "database": "db_bolsa",
-   "entities": ["dist/entity/**/*.js"],
-   "synchronize": true
+   "entities": ["dist/src/entity/**/*.js"],
+   "synchronize": true 
 }
