--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
+    "class-validator": "^0.12.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
@@ -24,6 +25,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.6",
+    "@types/glob": "^7.1.3",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/node": "^14.0.19",
     "@types/socket.io": "^2.1.8",
