--- a/package.json
+++ b/package.json
@@ -27,8 +27,7 @@
     "reflect-metadata": "^0.1.13",
     "socket.io": "^2.3.0",
     "socketio-jwt": "^4.6.2",
-    "typeorm": "^0.2.25",
-    "uuid": "^8.3.0"
+    "typeorm": "^0.2.25"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
