--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,9 +1,9 @@
 {
    "type": "mysql",
-   "host": "localhost",
+   "host": "159.203.71.106",
    "port": 3306,
-   "username": "root",
-   "password": "75120011",
+   "username": "admin",
+   "password": "bPPG+165",
    "database": "db_bolsa",
    "entities": ["dist/src/entity/**/*.js"],
    "synchronize": true 
